# clicker

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/clicker/: __main__.py  cli.py
tests/: __init__.py
