# Metadata etc not included until linting tools catch up
[project]
name            = "clicker"
version         = "0.1.0"
description     = "Clicker testing"
readme          = "README.md"
requires-python = ">=3.9"

# License Information
license = { file = "LICENSE" }

authors     = [{ name = "Jake Antmann", email = "jakeantmann@gmail.com" }]
maintainers = [{ name = "Jake Antmann", email = "jakeantmann@gmail.com" }]
# Search tags
# TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

# TODO add your own free-text keywords
keywords = ["click", "cookiecutter", "cli"]

dependencies = ["click==8.1.3"]

[project.scripts]
clicker = "clicker.cli:main"

[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
## package names should match these glob patterns (["*"] by default)
# include = ["my_package*"]
## exclude packages matching these glob patterns (empty by default)
# to disable scanning PEP 420 namespaces (true by default)
namespaces = false
